# aftereffects_spatial_media_plugins

./: .gitignore  CMakeLists.txt  InvEqui.cpp  InvEqui.hpp  InvEquiPiPL.r  InvEqui_Strings.cpp  InvEqui_Strings.hpp  LICENSE  Math3D.hpp  Meta.hpp  README.md  README.rst  appveyor.yml
Win/: InvEqui.sln  InvEqui.vcxproj  InvEqui.vcxproj.filters
equirectangular_to_equirectangular/: defs.hpp  main.cpp
equirectangular_to_perspective/: defs.hpp  main.cpp
global/: ae_definitions.hpp  effect_base.hpp  effectworld_handling.hpp  parameter_handling.hpp  perspective_math.hpp  version.hpp
perspective_to_equirectangular/: defs.hpp  main.cpp
perspective_to_perspective/: PiPL.r  defs.hpp  main.cpp
